<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="386dp"
        android:layout_height="291dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/totalHourTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingButton"
        app:layout_constraintVertical_bias="0.404" />

    <Button
        android:id="@+id/settingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6C0101"
        android:onClick="onSettingClick"
        android:text="@string/settingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteLastButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6C0101"
        android:onClick="ondelete"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/deleteAllButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6C0101"
        android:onClick="onaddEvent"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/deleteLastButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteAllButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:backgroundTint="#6C0101"
        android:onClick="onDeleteAll"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalHourTextView"
        android:layout_width="153dp"
        android:layout_height="19dp"
        android:layout_marginBottom="48dp"
        android:text="@string/totalNumberHourText"
        app:layout_constraintBottom_toTopOf="@+id/addEventButton"
        app:layout_constraintEnd_toStartOf="@+id/totalHourNumber"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalHourNumber"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/addEventButton"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>